--- a/Contact.html
+++ b/Contact.html
@@ -19,8 +19,8 @@
         <div class="header_main_slider">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="www.google.com">History</a></li>
-                <li><a href="Contact.html">Contact</a></li>
+                <li><a href="history.html">History</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </div>
     </div>
